# vitv_presenter

./: .gitignore  CMakeLists.txt  buildlauncher.sh  buildpgbrow.sh  pgb.trun.sh  readme.txt  run.sh  updatetestvenv.sh
linktest/: setup.testcy_bind.py  test.c  test.h  test.py  test_cffi.py  testcy_bind.c  testcy_bind.pyx
src/: launcher.sh
src/launcher/include/: sizeconsts.h  vitvlog.h
src/launcher/src/: launcher.c  vitvlog.c
src/pagebrowser/: appconsts.py  clusteredreclaiminglist.py  colorconsts.py  compoundgui.py  docclass.py  docinfo.py  dummy.py  exc.py  idorder.py  imagebank.py  layoutconsts.py  main.py  mainapp.py  pageclass.py  pagesarea.py  pagesecmgr.py  pagesmanager.py  presinfo.py  slideclass.py  slidesarea.py  slidesecmgr.py  testccq.py  testdummies.py  testthumb.py  vitvbind.py  vitvimage.py  vitvstring.py
src/pageeditor/doceditor/: nb-configuration.xml  pom.xml
src/presentationeditor/presentationeditor/: LayerConsts.java  pom.xml
src/presrender/src/: main.c  main.cpp  presdata.hpp  readxml.cpp  readxml.hpp  readxmlabbr.hpp  s.c  window.hpp
src/schema/: vitvpresmother.xsd
src/testpagebrow/: main.py
testdist/: vitvdocslauncher
tests/IPC_SHM-master/: read.py  read.spec  run.sh  write  write.c
tests/IPC_SHM-master/read/: read
tests/ipc_test/: app.spec  compileboth.sh  reader  reader.c  writer.py  writer.spec
vitvdocs.git/: config  packed-refs
vitvdocs.git/objects/pack/: pack-008be81d28e363f3646b2b16cb2057df0814b7df.idx  pack-008be81d28e363f3646b2b16cb2057df0814b7df.rev
workdir/: clqsol.ods  insert.ods  move.ods  swap.ods
(+20 files in other folders)
